WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13635
REGRESSION: Cannot log in to webmail.co.za account
https://bugs.webkit.org/show_bug.cgi?id=13635
Summary
REGRESSION: Cannot log in to webmail.co.za account
David Trevas
Reported
2007-05-08 23:04:14 PDT
I got a web-based e-mail account at webmail.co.za. With WebKit Safari, clicking the Login button after entering my userid/passwd does nothing. This works in the release version of Safari, as well as in Camino.
Attachments
Reduction
(600 bytes, text/html)
2007-05-09 09:02 PDT
,
mitz
no flags
Details
Extended test case
(875 bytes, text/html)
2007-05-09 10:14 PDT
,
mitz
no flags
Details
Make HTMLOptionElement's text attribute match other browsers
(22.40 KB, patch)
2007-05-11 03:20 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-05-09 07:38:08 PDT
If confirmed, this would be a regression.
David Kilzer (:ddkilzer)
Comment 2
2007-05-09 07:47:50 PDT
Test account details: Username: webkit Password: w3bk1t City in which you were born: Cupertino
David Kilzer (:ddkilzer)
Comment 3
2007-05-09 08:26:58 PDT
In Firefox 2.0.0.3, Firebug reports: document.floater has no properties in floater.js (line 16) if(!mie){eval('document.'+chip.named+'.top ='+chip.yy);eval('document.'+chip.named+'.left='+chip.xx);} Not sure if this error occurs in WebKit ToT as well, or if this even impacts logging in via WebKit ToT. (Logging in via Firefox 2.0.0.3 works, however.)
mitz
Comment 4
2007-05-09 09:02:01 PDT
Created
attachment 14432
[details]
Reduction Firefox passes both cases, shipping WebKit fails the second case (leading space), TOT fails both cases (trailing space and leading space).
mitz
Comment 5
2007-05-09 10:14:55 PDT
Created
attachment 14433
[details]
Extended test case Firefox, WinIE and WebKit fail the third test, however WebKit actually displays the Yen symbol in the popup, so I think it should pass.
mitz
Comment 6
2007-05-09 11:59:46 PDT
It looks almost as if most of the logic can be moved from HTMLOptionElement::optionText() to HTMLOptionElement::text(), but the cases where the label attribute is non-empty seem tricky.
mitz
Comment 7
2007-05-11 03:20:27 PDT
Created
attachment 14487
[details]
Make HTMLOptionElement's text attribute match other browsers
Darin Adler
Comment 8
2007-05-11 08:15:38 PDT
Comment on
attachment 14487
[details]
Make HTMLOptionElement's text attribute match other browsers r=me
Mark Rowe (bdash)
Comment 9
2007-05-11 10:11:30 PDT
Landed in
r21410
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug