2007-05-11  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13635
          REGRESSION: Cannot log in to webmail.co.za account

        Test: fast/dom/HTMLOptionElement/option-text.html

        Despite the specification that the 'text' attribute of HTMLOptionElement
        is "the text contained within the option element", other browsers return
        the text as displayed in the list box or popup, which is without leading,
        trailing and collapsible whitespace.

        * html/HTMLOptionElement.cpp:
        (WebCore::HTMLOptionElement::text): Moved the code to trim and collapse
        whitespace and replace backslashes with the currency symbol into this
        function.
        (WebCore::HTMLOptionElement::optionText): Left only the code that adds
        the leading spaces for grouped options. Removed code that, in quirks mode,
        displayed the label if the option element contained no text. That behavior
        did not match WinIE and the description of the expected behavior in
        fast/forms/HTMLOptionElement_label06.html.

2007-05-11  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test and updated results for http://bugs.webkit.org/show_bug.cgi?id=13635
          REGRESSION: Cannot log in to webmail.co.za account

        * fast/dom/HTMLOptionElement/option-text-expected.txt: Added.
        * fast/dom/HTMLOptionElement/option-text.html: Added.
        * fast/forms/HTMLOptionElement_label06-expected.checksum:
        * fast/forms/HTMLOptionElement_label06-expected.png:
        * fast/forms/HTMLOptionElement_label06-expected.txt:


Canonical link: https://commits.webkit.org/17857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21410 268f45cc-cd09-0410-ab3c-d52691b4dbfc